--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -183,3 +183,10 @@
     year="2015",
     note="University of Cambridge Part II CST course notes"
 }
+
+@book{papoulis2002probability,
+  title={Probability, random variables, and stochastic processes},
+  author={Papoulis, Athanasios and Pillai, S Unnikrishna},
+  year={2002},
+  publisher={Tata McGraw-Hill Education}
+}
